src/elements/snapshots/laser_pdf__elements__rotate__tests__basic-2.snap
---
source: src/elements/rotate.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            15.0,
        ),
        height: Some(
            18.0,
        ),
    },
    breakable: Some(
        ElementTestOutputBreakable {
            break_count: 0,
            extra_location_min_height: None,
            first_location_usage: WillUse,
        },
    ),
}
