src/elements/snapshots/laser_pdf__elements__rotate__tests__none-2.snap
---
source: src/elements/rotate.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: None,
        height: None,
    },
    breakable: Some(
        ElementTestOutputBreakable {
            break_count: 0,
            extra_location_min_height: None,
            first_location_usage: NoneHeight,
        },
    ),
}
