src/elements/snapshots/laser_pdf__elements__rotate__tests__pre_break-2.snap
---
source: src/elements/rotate.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            15.0,
        ),
        height: Some(
            100.0,
        ),
    },
    breakable: Some(
        ElementTestOutputBreakable {
            break_count: 1,
            extra_location_min_height: None,
            first_location_usage: WillSkip,
        },
    ),
}
